corrijo errores y agrego estilo a los sitios web

--- a/pages/Consultas.html
+++ b/pages/Consultas.html
@@ -25,52 +25,57 @@
     </header>
 
     <main>
-        <h3>Preguntas que nos suelen hacer</h3>
-        <section>
-            <article>
-                <h4>¿Pierdo la seña si cancelo el turno?</h4>
-                <ul>
-                    <li><p>Si cancelas el turno con al menos 3 días de anticipación te devolvemos tu dinero.</p></li>
-                </ul>
-            </article>
+        <div class="subtitulo">
+            <h3>Preguntas que nos suelen hacer:</h3>
+        </div>
+            <section class="preguntas-frecuentes">
+                    <article>
+                        <h4>¿Pierdo la seña si cancelo el turno?</h4>
+                        <ul>
+                            <li><p>Si cancelas el turno con al menos 3 días de anticipación te devolvemos tu dinero.</p></li>
+                        </ul>
+                    </article>
 
-            <article>
-                <h4>¿El diseño es personalizado?</h4>
-                <ul>
-                    <li><p>¡Claro! Podes pedir lo que desees, contamos con un equipo super personalizado y profesional.</p></li>
-                </ul>
-            </article>
+                    <article>
+                        <h4>¿El diseño es personalizado?</h4>
+                        <ul>
+                            <li><p>¡Claro! Podes pedir lo que desees, contamos con un equipo super personalizado y profesional.</p></li>
+                        </ul>
+                    </article>
 
-            <article>
-                <h4>¿Cuánto tiempo se tarda en terminar un turno?</h4>
-                <ul>
-                    <li><p>Todo depende de lo que te hagas, pero en general entre 2 y 3 horas.</p></li>
-                </ul>
-            </article>
+                    <article>
+                        <h4>¿Cuánto tiempo se tarda en terminar un turno?</h4>
+                        <ul>
+                            <li><p>Todo depende de lo que te hagas, pero en general entre 2 y 3 horas.</p></li>
+                        </ul>
+                    </article>
 
-            <article>
-                <h4>¿Cuanto duran las uñas?</h4>
-                <ul>
-                    <li><p>Bueno, eso va a depender de qué tipo de servicio tengas hecho, pero en general recomendamos hacer el service/retirado a los 15 días.</p></li>
-                </ul>
-            </article>
+                    <article>
+                        <h4>¿Cuanto duran las uñas?</h4>
+                        <ul>
+                            <li><p>Bueno, eso va a depender de qué tipo de servicio tengas hecho, pero en general recomendamos hacer el service/retirado a los 15 días.</p></li>
+                        </ul>
+                    </article>
 
-            <article>
-                <h4>¿Por qué tengo que hacerme service o retirado?</h4>
-                <ul>
-                    <li><p>Es por una cuestión de salud, y cuidado de tus uñas! es importante mantener tus uñas limpias y sanas para evitar la formación de hongos o encarnaciones desagradables.
+                    <article>
+                        <h4>¿Por qué tengo que hacerme service o retirado?</h4>
+                        <ul>
+                            <li><p>Es por una cuestión de salud, y cuidado de tus uñas! es importante mantener tus uñas limpias y sanas para evitar la formación de hongos o encarnaciones desagradables.
 
-                        Evita cortarlas y deja que nuestro equipo se encargue!</p></li>
-                </ul>
-            </article>
-        </section>
+                                Evita cortarlas y deja que nuestro equipo se encargue!</p></li>
+                        </ul>
+                    </article>
+            </section>
     </main>
 
 
     <footer>
         <div>
-            <h3>Si tenés alguna duda, no dudes en consultarnos!</h3>
-            <h3>Whatsapp: 3425000000</h3>
+            <h4>Si tenés alguna duda, no dudes en consultarnos!</h4>
+            <h4>Whatsapp: 3425000000</h4>
+        </div>
+
+        <div class="pie-de-pagina">
             <a href="./SobreNosotros.html">Sobre Nosotros</a>
         </div>
     </footer>
