--- a/pages/SobreNosotros.html
+++ b/pages/SobreNosotros.html
@@ -48,7 +48,7 @@
 
 
     <footer>
-        <div>
+        <div class="pie-de-pagina">
             <a href="../index.html">Ir al Inicio</a>
         </div>
     </footer>
