--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Gaia Nail Art</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
@@ -11,15 +12,29 @@
 
         <h1>Gaia Manicura</h1>
 
-            <nav>
-                <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/Info-Precios.html">Info-Precios</a></li>
-                <li><a href="./pages/Horarios-Turnos.html">Horarios/Turnos</a></li>
-                <li><a href="./pages/Consultas.html">Consultas</a></li>
-                <li><a href="./pages/SobreNosotros.html">Sobre Nosotros</a></li>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="./pages/Info-Precios.html">Info-Precios</a></li>
+                    <li><a href="./pages/Horarios-Turnos.html">Horarios/Turnos</a></li>
+                    <li><a href="./pages/Consultas.html">Consultas</a></li>
+                    <li><a href="./pages/SobreNosotros.html">Sobre Nosotros</a></li>
                 </ul>
-            </nav>
+            </div>
+        </div>
+    </nav>
+<!-- <ul>
+<li><a href="index.html">Inicio</a></li>
+<li><a href="./pages/Info-Precios.html">Info-Precios</a></li>
+<li><a href="./pages/Horarios-Turnos.html">Horarios/Turnos</a></li>
+<li><a href="./pages/Consultas.html">Consultas</a></li>
+<li><a href="./pages/SobreNosotros.html">Sobre Nosotros</a></li>
+</ul> -->
 
     </header>
 
@@ -63,5 +78,6 @@
             </nav>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
