--- a/pages/Info-Precios.html
+++ b/pages/Info-Precios.html
@@ -11,47 +11,74 @@
 
         <h1>Gaia Manicura</h1>
 
-                <nav>
-                    <ul>
+        <!-- <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li><a href="../index.html">Inicio</a></li>
-                        </li><a href="./Info-Precios.html">Info-Precios</a><li>
-                        </li><a href="./Horarios-Turnos.html">Horarios/Turnos</a><li>
-                        </li><a href="./Consultas.html">Consultas</a><li>
-                        </li><a href="./SobreNosotros.html">Sobre Nosotros</a><li>
+                    </li><a href="./Info-Precios.html">Info-Precios</a><li>
+                    </li><a href="./Horarios-Turnos.html">Horarios/Turnos</a><li>
+                    </li><a href="./Consultas.html">Consultas</a><li>
+                    </li><a href="./SobreNosotros.html">Sobre Nosotros</a><li>
                     </ul>
-                </nav>
+                </div>
+            </div>
+        </nav> -->
+
+
+            <nav>
+            <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            </li><a href="./Info-Precios.html">Info-Precios</a><li>
+            </li><a href="./Horarios-Turnos.html">Horarios/Turnos</a><li>
+            </li><a href="./Consultas.html">Consultas</a><li>
+            </li><a href="./SobreNosotros.html">Sobre Nosotros</a><li>
+            </ul>
+            </nav>
 
     </header>
 
     <main>
-        <section class="lista-precios">
-            <article class="precios">
-                <h3>Esmaltado Semipermanente</h3>
-                <h4>$$$</h4>
+        <section class="tarjetas-precios">
+
+            <div class="precios">
+                <p>Esmaltado Semipermanente <span>$$$</span></p>
+            </div>
+
+            <div class="precios">
+                <p>Capping <span>$$$</span></p>
+            </div>
+
+            <div class="precios">
+                <p>Esculpidas <span>$$$</span></p>
+            </div>
+
+            <div class="img-precios">
                 <img src="../img/ejemplo-semipermanentes-1.png" alt="esmaltado semipermanente">
                 <img src="../img/ejemplo-semipermanentes-2.png" alt="esmaltado semipermanente">
-            </article>
+            </div>
 
-            <article class="precios">
-                <h3>Capping</h3>
-                <h4>$$$</h4>
+            <div class="img-precios">
                 <img src="../img/ejemplo-capping-1.png" alt="esmaltado con capping">
                 <img src="../img/ejemplo-capping-2.png" alt="esmaltado con capping">
-            </article>
+            </div>
 
-            <article class="precios">
-                <h3>Esculpidas</h3>
-                <h4>$$$</h4>
+            <div class="img-precios">
                 <img src="../img/ejemplo-esculpidas-1.png" alt="esmalte esculpido talle 3">
                 <img src="../img/ejemplo-esculpidas-2.png" alt="esmalte esculpido talle 2">
-            </article>
+            </div>
+
+
         </section>
     </main>
 
 
     <footer>
         <div>
-            <nav>
+            <nav class="pie-de-pagina">
                 <a href="./Horarios-Turnos.html">Ir a turnos</a>
             </nav>
         </div>
